Updates for variable passing - startup.sh call was missing.